replace vialab.science.uoit.ca with vialab.ca

--- a/algorithms/index.html
+++ b/algorithms/index.html
@@ -136,7 +136,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
