--- a/projects/index.html
+++ b/projects/index.html
@@ -137,7 +137,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -325,7 +325,7 @@
       <!--        </div>-->
       <!--    </a>-->
 
-      <!--    <a href="http://vialab.science.uoit.ca/smt/">-->
+      <!--    <a href="http://vialab.ca/smt/">-->
       <!--        <div class="researchProject">-->
       <!--            <img alt="Simple Multi-Touch Website" src="../img/projects/SMT-Web.jpg" width="250" height="250">-->
       <!--            <div class="projectTitle">Simple Multi-Touch-->
