--- a/projects/webGL/webgl.html
+++ b/projects/webGL/webgl.html
@@ -68,7 +68,7 @@
   </head>
   <body onload="webGLStart();">
     <div class="container">
-      <!--<div id="vialab"> <a href="http://vialab.science.uoit.ca/">
+      <!--<div id="vialab"> <a href="http://vialab.ca/">
     <span>My Lab's Website!</span>
     <span>Vialab</span>
 </a></div>-->
