--- a/research/affectvis/index.html
+++ b/research/affectvis/index.html
@@ -137,7 +137,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -259,7 +259,7 @@
           <h2>Acknowledgements</h2>
 
           <a
-            href="http://vialab.science.uoit.ca/"
+            href="http://vialab.ca/"
             target="_blank"
             title="University of Ontario Institute of Technology vialab research group"
             ><img
