--- a/research/off-screen-desktop/index.html
+++ b/research/off-screen-desktop/index.html
@@ -143,7 +143,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -207,9 +207,9 @@
         <p>
           Lab Project Page:
           <a
-            href="http://vialab.science.uoit.ca/portfolio/off-screen-desktop"
+            href="http://vialab.ca/portfolio/off-screen-desktop"
             target="_blank"
-            >http://vialab.science.uoit.ca/portfolio/off-screen-desktop</a
+            >http://vialab.ca/portfolio/off-screen-desktop</a
           >
         </p>
       </div>
@@ -897,7 +897,7 @@
         /></a>
 
         <a
-          href="http://vialab.science.uoit.ca/"
+          href="http://vialab.ca/"
           target="_blank"
           title="University of Ontario Institute of Technology vialab research group"
           ><img
