--- a/research/smt/index.html
+++ b/research/smt/index.html
@@ -101,7 +101,7 @@
         /></a>
       
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -152,9 +152,9 @@
             <h1>Simple Multi-Touch (SMT) Toolkit</h1>
             May 2011 &ndash; September 2014
             <br><br><span class="bold">Technologies:</span> Java, <a href="http://www.processing.org/" target="_blank">Processing</a>, <a href="http://www.tuio.org/" target="_blank">TUIO</a>, <a href="https://www.leapmotion.com/" target="_blank">Leap Motion</a>
-            <p>Project Website: <a href="http://vialab.science.uoit.ca/smt/" target="_blank">http://vialab.science.uoit.ca/smt/</a>
+            <p>Project Website: <a href="http://vialab.ca/smt/" target="_blank">http://vialab.ca/smt/</a>
                 <br>
-                Lab Project Page: <a href="http://vialab.science.uoit.ca/portfolio/smt-toolkit" target="_blank">http://vialab.science.uoit.ca/portfolio/smt-toolkit</a>
+                Lab Project Page: <a href="http://vialab.ca/portfolio/smt-toolkit" target="_blank">http://vialab.ca/portfolio/smt-toolkit</a>
                 </p>
         </div>
 
@@ -174,7 +174,7 @@ Chapter in Designing Digital Surface Applications
 
         </div>
         
-        <div class="center" style="margin-top:50px; margin-bottom: 20px;">Simple Multi-Touch (SMT) is open source and licensed under <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank" title="GPL version 3">GPLv3</a>. <br>You can download the toolkit and its source code on <a href="https://github.com/vialab/SMT" target="_blank"><img id="onGithub" src="../../img/socialIcons/github.png" alt="GitHub" width="56" height="25"></a> or <a href="http://vialab.science.uoit.ca/smt/download.php" target="_blank" title="SMT Website">SMT's website</a>.</div>
+        <div class="center" style="margin-top:50px; margin-bottom: 20px;">Simple Multi-Touch (SMT) is open source and licensed under <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank" title="GPL version 3">GPLv3</a>. <br>You can download the toolkit and its source code on <a href="https://github.com/vialab/SMT" target="_blank"><img id="onGithub" src="../../img/socialIcons/github.png" alt="GitHub" width="56" height="25"></a> or <a href="http://vialab.ca/smt/download.php" target="_blank" title="SMT Website">SMT's website</a>.</div>
 
         <div class="researchContent">
             <div class="researchSection center" style="margin-bottom:20px;">
@@ -201,7 +201,7 @@ Designing and developing custom multi-touch gesture recognition algorithms for s
 
                 <a href="http://www.nsercsurfnet.ca/" target="_blank" title="NSERC Digital Surface Software Application Network"><img class="ackLogo" src="../../img/logos/SurfNet.jpg" alt="NSERC Digital Surface Software Application Network" width="142" height="55"></a>
 
-                <a href="http://vialab.science.uoit.ca/" target="_blank" title="University of Ontario Institute of Technology vialab research group"><img class="ackLogo" src="../../img/logos/vialab.png" alt="University of Ontario Institute of Technology vialab research group" width="145" height="52"></a>
+                <a href="http://vialab.ca/" target="_blank" title="University of Ontario Institute of Technology vialab research group"><img class="ackLogo" src="../../img/logos/vialab.png" alt="University of Ontario Institute of Technology vialab research group" width="145" height="52"></a>
 
                 <a href="http://touchlab.uwaterloo.ca/" target="_blank" title="University of Waterloo Touchlab"><img class="ackLogo" src="../../img/logos/TouchlabLogo.png" alt="University of Waterloo Touchlab" width="57" height="55"></a>
         </div>
