--- a/research/wall-of-gray/index.html
+++ b/research/wall-of-gray/index.html
@@ -136,7 +136,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -207,9 +207,9 @@
         <p>
           Lab Project Page:
           <a
-            href="http://vialab.science.uoit.ca/portfolio/reading-comprehension-on-mobile-devices"
+            href="http://vialab.ca/portfolio/reading-comprehension-on-mobile-devices"
             target="_blank"
-            >http://vialab.science.uoit.ca/portfolio/reading-comprehension-on-mobile-devices</a
+            >http://vialab.ca/portfolio/reading-comprehension-on-mobile-devices</a
           >
         </p>
       </div>
@@ -275,7 +275,7 @@
         /></a>
 
         <a
-          href="http://vialab.science.uoit.ca/"
+          href="http://vialab.ca/"
           target="_blank"
           title="University of Ontario Institute of Technology vialab research group"
           ><img
