--- a/papers.html
+++ b/papers.html
@@ -144,7 +144,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -948,7 +948,7 @@
           Christian Rohrdantz, Daniela Oelke, Miloˇs Krstaji´c and Fabian
           Fischer. 2011.
           <a
-            href="http://vialab.science.uoit.ca/textvis2011/papers/textvis%202011-rohrdantz.pdf"
+            href="http://vialab.ca/textvis2011/papers/textvis%202011-rohrdantz.pdf"
             target="_blank"
             >Link.</a
           >
