--- a/publications/index.html
+++ b/publications/index.html
@@ -137,7 +137,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -405,7 +405,7 @@
 
           <a
             class="paperLink"
-            href="http://vialab.science.uoit.ca/portfolio/tandemtable"
+            href="http://vialab.ca/portfolio/tandemtable"
             target="_blank"
             title="Lab Website"
             >Enhancing Tandem Language Learning Using an Interactive Tabletop</a
@@ -442,7 +442,7 @@
 
           <a
             class="paperLink"
-            href="http://vialab.science.uoit.ca/portfolio/smt-toolkit"
+            href="http://vialab.ca/portfolio/smt-toolkit"
             target="_blank"
             title="Link to Project"
             >The Simple Multi-Touch Toolkit</a
@@ -479,7 +479,7 @@
 
           <a
             class="paperLink"
-            href="http://vialab.science.uoit.ca/portfolio/tandemtable"
+            href="http://vialab.ca/portfolio/tandemtable"
             target="_blank"
             title="Lab Website"
             >Augmenting Tandem Language Learning with the TandemTable</a
@@ -512,7 +512,7 @@
 
           <a
             class="paperLink"
-            href="http://vialab.science.uoit.ca/portfolio/tandemtable"
+            href="http://vialab.ca/portfolio/tandemtable"
             target="_blank"
             title="Lab Website"
             >Learning In Tandem: Augmenting Tandem Language Learning With
@@ -545,7 +545,7 @@
 
           <a
             class="paperLink"
-            href="http://vialab.science.uoit.ca/portfolio/smt-toolkit"
+            href="http://vialab.ca/portfolio/smt-toolkit"
             target="_blank"
             title="Lab Website"
             >Simple Multi-Touch: A framework for teaching multi-touch
@@ -581,7 +581,7 @@
         <div class="year">2012</div>
         <div class="publication">
           <a
-            href="http://vialab.science.uoit.ca/portfolio/tandemtable"
+            href="http://vialab.ca/portfolio/tandemtable"
             target="_blank"
             title="Lab Website"
             >Honours Undergraduate Thesis: TandemTable</a
@@ -600,7 +600,7 @@
         <div class="year">2013</div>
         <div class="publication">
           <a
-            href="http://vialab.science.uoit.ca/portfolio/smt-toolkit"
+            href="http://vialab.ca/portfolio/smt-toolkit"
             target="_blank"
             title="Lab Website"
             >Simple Multi-Touch (SMT) Toolkit</a
@@ -619,7 +619,7 @@
         <div class="year">2012</div>
         <div class="publication">
           <a
-            href="http://vialab.science.uoit.ca/portfolio/smt-toolkit"
+            href="http://vialab.ca/portfolio/smt-toolkit"
             target="_blank"
             title="Lab Website"
             >Simple Multi-Touch (SMT) Toolkit</a
@@ -661,7 +661,7 @@
         <div class="year">2012</div>
         <div class="publication">
           <a
-            href="http://vialab.science.uoit.ca/portfolio/tandemtable"
+            href="http://vialab.ca/portfolio/tandemtable"
             target="_blank"
             title="Lab Website"
             >Honours Undergraduate Thesis: TandemTable</a
@@ -680,7 +680,7 @@
         <div class="year">2011</div>
         <div class="publication">
           <a
-            href="http://vialab.science.uoit.ca/portfolio/smt-toolkit"
+            href="http://vialab.ca/portfolio/smt-toolkit"
             target="_blank"
             title="Lab Website"
             >Simple Multi-Touch (SMT) Toolkit</a
@@ -703,7 +703,7 @@
         <div class="year">2015</div>
         <div class="publication">
           <a
-            href="http://vialab.science.uoit.ca/portfolio/tandemtable"
+            href="http://vialab.ca/portfolio/tandemtable"
             target="_blank"
             title="Lab Website"
             >Honours Undergraduate Thesis: TandemTable</a
@@ -727,7 +727,7 @@
         <div class="year">2014</div>
         <div class="publication">
           <a
-            href="http://vialab.science.uoit.ca/portfolio/tandemtable"
+            href="http://vialab.ca/portfolio/tandemtable"
             target="_blank"
             title="Lab Website"
             >Honours Undergraduate Thesis: TandemTable</a
