--- a/research/tandemtable/index.html
+++ b/research/tandemtable/index.html
@@ -137,7 +137,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -205,10 +205,8 @@
         <a href="http://www.tuio.org/" target="_blank">TUIO</a>
         <p>
           Lab Project Page:
-          <a
-            href="http://vialab.science.uoit.ca/portfolio/tandemtable"
-            target="_blank"
-            >http://vialab.science.uoit.ca/portfolio/tandemtable</a
+          <a href="http://vialab.ca/portfolio/tandemtable" target="_blank"
+            >http://vialab.ca/portfolio/tandemtable</a
           >
         </p>
       </div>
@@ -402,7 +400,7 @@
         /></a>
 
         <a
-          href="http://vialab.science.uoit.ca/"
+          href="http://vialab.ca/"
           target="_blank"
           title="University of Ontario Institute of Technology vialab research group"
           ><img
