--- a/papers.html
+++ b/papers.html
@@ -948,7 +948,7 @@
           Christian Rohrdantz, Daniela Oelke, Miloˇs Krstaji´c and Fabian
           Fischer. 2011.
           <a
-            href="http://vialab.ca/textvis2011/papers/textvis%202011-rohrdantz.pdf"
+            href="https://vialab.ca/textvis2011/papers/textvis%202011-rohrdantz.pdf"
             target="_blank"
             >Link.</a
           >
