--- a/research/spatialvis/index.html
+++ b/research/spatialvis/index.html
@@ -273,7 +273,7 @@
         <h2>Acknowledgements</h2>
 
         <a
-          href="http://vialab.ca/"
+          href="https://vialab.ca/"
           target="_blank"
           title="University of Ontario Institute of Technology vialab research group"
           ><img
