--- a/research/tandemtable/index.html
+++ b/research/tandemtable/index.html
@@ -205,8 +205,8 @@
         <a href="http://www.tuio.org/" target="_blank">TUIO</a>
         <p>
           Lab Project Page:
-          <a href="http://vialab.ca/portfolio/tandemtable" target="_blank"
-            >http://vialab.ca/portfolio/tandemtable</a
+          <a href="https://vialab.ca/portfolio/tandemtable" target="_blank"
+            >https://vialab.ca/portfolio/tandemtable</a
           >
         </p>
       </div>
@@ -400,7 +400,7 @@
         /></a>
 
         <a
-          href="http://vialab.ca/"
+          href="https://vialab.ca/"
           target="_blank"
           title="University of Ontario Institute of Technology vialab research group"
           ><img
