--- a/research/off-screen-desktop/index.html
+++ b/research/off-screen-desktop/index.html
@@ -207,9 +207,9 @@
         <p>
           Lab Project Page:
           <a
-            href="http://vialab.ca/portfolio/off-screen-desktop"
+            href="https://vialab.ca/portfolio/off-screen-desktop"
             target="_blank"
-            >http://vialab.ca/portfolio/off-screen-desktop</a
+            >https://vialab.ca/portfolio/off-screen-desktop</a
           >
         </p>
       </div>
@@ -897,7 +897,7 @@
         /></a>
 
         <a
-          href="http://vialab.ca/"
+          href="https://vialab.ca/"
           target="_blank"
           title="University of Ontario Institute of Technology vialab research group"
           ><img
