update vialab links to use team and research

--- a/research/off-screen-desktop/index.html
+++ b/research/off-screen-desktop/index.html
@@ -143,7 +143,7 @@
         /></a>
 
         <a
-          href="https://vialab.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/team/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -207,7 +207,7 @@
         <p>
           Lab Project Page:
           <a
-            href="https://vialab.ca/portfolio/off-screen-desktop"
+            href="https://vialab.ca/research/off-screen-desktop"
             target="_blank"
             >https://vialab.ca/portfolio/off-screen-desktop</a
           >
