--- a/research/smt/index.html
+++ b/research/smt/index.html
@@ -101,7 +101,7 @@
         /></a>
       
         <a
-          href="https://vialab.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/team/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -154,7 +154,7 @@
             <br><br><span class="bold">Technologies:</span> Java, <a href="http://www.processing.org/" target="_blank">Processing</a>, <a href="http://www.tuio.org/" target="_blank">TUIO</a>, <a href="https://www.leapmotion.com/" target="_blank">Leap Motion</a>
             <p>Project Website: <a href="https://vialab.ca/smt/" target="_blank">https://vialab.ca/smt/</a>
                 <br>
-                Lab Project Page: <a href="https://vialab.ca/portfolio/smt-toolkit" target="_blank">https://vialab.ca/portfolio/smt-toolkit</a>
+                Lab Project Page: <a href="https://vialab.ca/research/simple-multi-touch-toolkit" target="_blank">https://vialab.ca/portfolio/smt-toolkit</a>
                 </p>
         </div>
 
