--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </a>
 
         <a
-          href="https://vialab.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/team/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -589,7 +589,7 @@
               <div class="NewsText">
                 Presented
                 <a
-                  href="https://vialab.ca/portfolio/tandemtable"
+                  href="https://vialab.ca/research/tandemtable"
                   target="_blank"
                   title="Lab Website"
                   >TandemTable</a
@@ -710,7 +710,7 @@
               <div class="NewsText">
                 Demoed
                 <a
-                  href="https://vialab.ca/portfolio/tandemtable"
+                  href="https://vialab.ca/research/tandemtable"
                   target="_blank"
                   title="TandemTable"
                   >TandemTable</a
@@ -796,7 +796,7 @@
               <div class="NewsText">
                 Gave a tutorial on the
                 <a
-                  href="https://vialab.ca/portfolio/smt-toolkit"
+                  href="https://vialab.ca/research/simple-multi-touch-toolkit"
                   target="_blank"
                   title="Simple Multi-Touch (SMT) toolkit for Processing"
                   >Simple Multi-Touch (SMT) toolkit</a
@@ -838,7 +838,7 @@
               <div class="NewsText">
                 Our
                 <a
-                  href="https://vialab.ca/portfolio/smt-toolkit"
+                  href="https://vialab.ca/research/simple-multi-touch-toolkit"
                   target="_blank"
                   title="Simple Multi-Touch (SMT) toolkit for Processing"
                   >Simple Multi-Touch (SMT) toolkit</a
@@ -874,7 +874,7 @@
               <div class="NewsText">
                 Gave a tutorial on the
                 <a
-                  href="https://vialab.ca/portfolio/smt-toolkit"
+                  href="https://vialab.ca/research/simple-multi-touch-toolkit"
                   target="_blank"
                   title="Simple Multi-Touch (SMT) toolkit for Processing"
                   >Simple Multi-Touch (SMT) toolkit</a
@@ -949,7 +949,7 @@
               <div class="NewsText">
                 Demoed the
                 <a
-                  href="https://vialab.ca/portfolio/smt-toolkit"
+                  href="https://vialab.ca/research/simple-multi-touch-toolkit"
                   target="_blank"
                   title="Simple Multi-Touch (SMT) toolkit for Processing"
                   >Simple Multi-Touch (SMT) toolkit</a
@@ -969,7 +969,7 @@
               <div class="NewsText">
                 Presented my research poster on the
                 <a
-                  href="https://vialab.ca/portfolio/smt-toolkit"
+                  href="https://vialab.ca/research/simple-multi-touch-toolkit"
                   target="_blank"
                   title="Simple Multi-Touch (SMT) toolkit for Processing"
                   >Simple Multi-Touch (SMT) toolkit</a
