--- a/papers.html
+++ b/papers.html
@@ -144,7 +144,7 @@
         /></a>
 
         <a
-          href="https://vialab.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/team/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
