--- a/research/spatialvis/index.html
+++ b/research/spatialvis/index.html
@@ -136,7 +136,7 @@
         /></a>
 
         <a
-          href="https://vialab.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/team/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
