--- a/research/tandemtable/index.html
+++ b/research/tandemtable/index.html
@@ -137,7 +137,7 @@
         /></a>
 
         <a
-          href="https://vialab.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/team/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -205,8 +205,8 @@
         <a href="http://www.tuio.org/" target="_blank">TUIO</a>
         <p>
           Lab Project Page:
-          <a href="https://vialab.ca/portfolio/tandemtable" target="_blank"
-            >https://vialab.ca/portfolio/tandemtable</a
+          <a href="https://vialab.ca/research/tandemtable" target="_blank"
+            >https://vialab.ca/research/tandemtable</a
           >
         </p>
       </div>
