--- a/research/wall-of-gray/index.html
+++ b/research/wall-of-gray/index.html
@@ -136,7 +136,7 @@
         /></a>
 
         <a
-          href="https://vialab.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/team/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -207,7 +207,7 @@
         <p>
           Lab Project Page:
           <a
-            href="https://vialab.ca/portfolio/reading-comprehension-on-mobile-devices"
+            href="https://vialab.ca/research/reading-comprehension-on-mobile-devices"
             target="_blank"
             >https://vialab.ca/portfolio/reading-comprehension-on-mobile-devices</a
           >
