remove project links from index.html

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               height="400"
             />
           </a>
-          <a href="projects/rayTracer/">
+          <!-- <a href="projects/rayTracer/">
             <img
               id="rayImg"
               src="img/raytracer-mini.png"
@@ -386,12 +386,12 @@
               width="900"
               height="400"
             />
-          </a>
+          </a> -->
         </div>
 
-        <div id="glovecaption" class="nivo-html-caption">
+        <!-- <div id="glovecaption" class="nivo-html-caption">
           <a href="projects/mouse-glove/">Mouse Glove Input Device</a>
-        </div>
+        </div> -->
 
         <div id="Affectcaption" class="nivo-html-caption">
           <a href="research/affectvis/"
@@ -402,18 +402,18 @@
         <div id="Perceptcaption" class="nivo-html-caption">
           <a href="research/percept/">Stereoscopic 3D Perception Study</a>
         </div>
-        <div id="quakecaption" class="nivo-html-caption">
+        <!-- <div id="quakecaption" class="nivo-html-caption">
           <a href="projects/quakeVis/"
             >Earthquake Visualization using real-time data</a
           >
-        </div>
+        </div> -->
 
-        <div id="midpointcaption" class="nivo-html-caption">
+        <!-- <div id="midpointcaption" class="nivo-html-caption">
           <a href="projects/midpoint/">Random Terrain Generation Experiment</a>
         </div>
         <div id="raycaption" class="nivo-html-caption">
           <a href="projects/rayTracer/">Ray Tracing Experiment</a>
-        </div>
+        </div> -->
 
         <div id="SMTcaption" class="nivo-html-caption">
           <a href="research/smt/">Simple Multi-Touch (SMT) Toolkit</a>
