--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             >Publications</a
           >
           <a class="nav-item" itemprop="name" href="/research/">Research</a>
-          <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'bio/index.php')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>-->
+          <a class="nav-item" itemprop="name" href="/bio/">Bio</a>
           <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'blog/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
           <!--<a <?php /*if (strpos($_SERVER['PHP_SELF'], 'algorithms/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';*/ ?> itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
