--- a/projects/index.html
+++ b/projects/index.html
@@ -175,7 +175,9 @@
             >Publications</a
           >
           <a class="nav-item" itemprop="name" href="/research/">Research</a>
-          <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>-->
+          <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/"
+            >Bio</a
+          >
           <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
           <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
