--- a/research/index.html
+++ b/research/index.html
@@ -180,7 +180,9 @@
           <a class="nav-item-current" itemprop="name" href="/research/"
             >Research</a
           >
-          <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>-->
+          <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/"
+            >Bio</a
+          >
           <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
           <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
