feat(home page): add text stating that the user needs to log in to twitter to see my tweets

--- a/research/index.html
+++ b/research/index.html
@@ -1,331 +1,187 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="https://schema.org/WebPage">
-  <head prefix="og: https://ogp.me/ns#">
-    <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="https://erikpaluka.com/img/favicon.ico" />
-    <meta
-      name="keywords"
-      content="human-computer interaction, information visualization, computer science, erik paluka, technology, development"
-    />
-    <meta name="author" content="Erik Paluka" />
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-    <!-- Google Analytics -->
-    <script>
-      (function (i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r;
-        (i[r] =
-          i[r] ||
-          function () {
-            (i[r].q = i[r].q || []).push(arguments);
-          }),
-          (i[r].l = 1 * new Date());
-        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m);
-      })(
-        window,
-        document,
-        "script",
-        "//www.google-analytics.com/analytics.js",
-        "ga"
-      );
+<head prefix="og: https://ogp.me/ns#">
+  <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="https://erikpaluka.com/img/favicon.ico" />
+  <meta name="keywords"
+    content="human-computer interaction, information visualization, computer science, erik paluka, technology, development" />
+  <meta name="author" content="Erik Paluka" />
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-      ga("create", "UA-32905413-2", "erikpaluka.com");
-      ga("require", "displayfeatures");
-      ga("send", "pageview");
-    </script>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-      type="text/css"
-    />
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
 
-    <!-- FB Open Graph -->
-    <meta
-      name="image"
-      property="og:image"
-      content="https://erikpaluka.com/img/P-300x218.jpg"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Erik Paluka's Website" />
-    <meta
-      property="og:description"
-      content="Master of Science in Computer Science specializing in Human-Computer Interaction (Spatial & Multi-Touch Interaction) and Information Visualization."
-    />
+  <!-- FB Open Graph -->
+  <meta name="image" property="og:image" content="https://erikpaluka.com/img/P-300x218.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Erik Paluka's Website" />
+  <meta property="og:description"
+    content="Master of Science in Computer Science specializing in Human-Computer Interaction (Spatial & Multi-Touch Interaction) and Information Visualization." />
 
-    <!-- Twitter Card data -->
-    <meta name="twitter:site" content="@ErikPaluka" />
-    <meta name="twitter:creator" content="@ErikPaluka" />
+  <!-- Twitter Card data -->
+  <meta name="twitter:site" content="@ErikPaluka" />
+  <meta name="twitter:creator" content="@ErikPaluka" />
 
-    <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Erik Paluka's Website" />
-    <meta
-      itemprop="description"
-      content="Master of Science in Computer Science specializing in Human-Computer Interaction (Spatial & Multi-Touch Interaction) and Information Visualization."
-    />
-    <meta itemprop="image" content="https://erikpaluka.com/img/P-300x218.jpg" />
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="Erik Paluka's Website" />
+  <meta itemprop="description"
+    content="Master of Science in Computer Science specializing in Human-Computer Interaction (Spatial & Multi-Touch Interaction) and Information Visualization." />
+  <meta itemprop="image" content="https://erikpaluka.com/img/P-300x218.jpg" />
 
-    <!-- Human-Computer Interaction (HCI) within the realm of Computer Science. Erik is a graduate student in HCI and a member of the vialab research group at UOIT. -->
+  <!-- Human-Computer Interaction (HCI) within the realm of Computer Science. Erik is a graduate student in HCI and a member of the vialab research group at UOIT. -->
 
-    <title>Research - Erik Paluka</title>
-    <meta
-      name="description"
-      content="Computer science research projects that Erik Paluka has worked on"
-    />
+  <title>Research - Erik Paluka</title>
+  <meta name="description" content="Computer science research projects that Erik Paluka has worked on" />
 
-    <link
-      rel="stylesheet"
-      href="../css/style.css"
-      type="text/css"
-      media="screen"
-    />
-    <script src="../js/jquery-1.9.1.min.js"></script>
-    <script src="../js/galleria/galleria-1.3.6.min.js"></script>
-    <script src="../js/galleria/plugins/flickr/galleria.flickr.min.js"></script>
-  </head>
+  <link rel="stylesheet" href="../css/style.css" type="text/css" media="screen" />
+  <script src="../js/jquery-1.9.1.min.js"></script>
+  <script src="../js/galleria/galleria-1.3.6.min.js"></script>
+  <script src="../js/galleria/plugins/flickr/galleria.flickr.min.js"></script>
+</head>
 
-  <body>
-    <div class="container">
-      <div class="socialIcons">
-        <a href="https://github.com/paluka" target="_blank" title="GitHub"
-          ><img
-            src="https://erikpaluka.com//img/socialIcons//github.png"
-            width="56"
-            height="25"
-            alt="GitHub Account"
-        /></a>
+<body>
+  <div class="container">
+    <div class="socialIcons">
+      <a href="https://github.com/paluka" target="_blank" title="GitHub"><img
+          src="https://erikpaluka.com//img/socialIcons//github.png" width="56" height="25" alt="GitHub Account" /></a>
 
-        <a
-          href="https://scholar.google.ca/citations?user=563USoAAAAAJ"
-          target="_blank"
-          title="Google Scholar"
-          ><img
-            src="https://erikpaluka.com//img/socialIcons//googleScholar.png"
-            width="25"
-            height="25"
-            alt="Google Scholar Account"
-        /></a>
+      <a href="https://scholar.google.ca/citations?user=563USoAAAAAJ" target="_blank" title="Google Scholar"><img
+          src="https://erikpaluka.com//img/socialIcons//googleScholar.png" width="25" height="25"
+          alt="Google Scholar Account" /></a>
 
-        <a
-          href="https://www.linkedin.com/in/erikpaluka"
-          target="_blank"
-          title="LinkedIn"
-          ><img
-            src="https://erikpaluka.com//img/socialIcons//LinkedIn_IN_Icon_25px.png"
-            width="25"
-            height="25"
-            alt="LinkedIn Account"
-        /></a>
+      <a href="https://www.linkedin.com/in/erikpaluka" target="_blank" title="LinkedIn"><img
+          src="https://erikpaluka.com//img/socialIcons//LinkedIn_IN_Icon_25px.png" width="25" height="25"
+          alt="LinkedIn Account" /></a>
 
-        <a href="https://twitter.com/ErikPaluka" target="_blank" title="Twitter"
-          ><img
-            src="https://erikpaluka.com//img/socialIcons//twitter.png"
-            width="25"
-            height="25"
-            alt="Twitter Account"
-        /></a>
+      <a href="https://twitter.com/ErikPaluka" target="_blank" title="Twitter"><img
+          src="https://erikpaluka.com//img/socialIcons//twitter.png" width="25" height="25" alt="Twitter Account" /></a>
 
-        <a
-          href="https://www.flickr.com/photos/erikpaluka/"
-          target="_blank"
-          title="flickr"
-          ><img
-            src="https://erikpaluka.com//img/socialIcons//flickr-25px.jpg"
-            width="25"
-            height="25"
-            alt="flickr Account"
-        /></a>
+      <a href="https://www.flickr.com/photos/erikpaluka/" target="_blank" title="flickr"><img
+          src="https://erikpaluka.com//img/socialIcons//flickr-25px.jpg" width="25" height="25"
+          alt="flickr Account" /></a>
 
-        <a
-          href="https://vialab.ca/team/erik-paluka"
-          target="_blank"
-          title="vialab Research Group"
-        >
-          <img
-            src="https://erikpaluka.com//img/socialIcons//vialab.png"
-            width="70"
-            height="25"
-            alt="vialab Research Group Profile Page"
-          />
+      <a href="https://vialab.ca/team/erik-paluka" target="_blank" title="vialab Research Group">
+        <img src="https://erikpaluka.com//img/socialIcons//vialab.png" width="70" height="25"
+          alt="vialab Research Group Profile Page" />
+      </a>
+    </div>
+
+    <div id="nameHeader" itemscope itemtype="https://schema.org/Person">
+      <div id="nameTitle">
+        <a href="https://erikpaluka.com/">
+          <span itemprop="name">Erik Paluka</span><span style="font-size: 50%">, M.Sc. in Computer Science</span>
+
+          <p id="namePosition" itemprop="jobTitle">
+            Human-Computer Interaction &amp; Information Visualization
+          </p>
         </a>
       </div>
 
-      <div id="nameHeader" itemscope itemtype="https://schema.org/Person">
-        <div id="nameTitle">
-          <a href="https://erikpaluka.com/">
-            <span itemprop="name">Erik Paluka</span
-            ><span style="font-size: 50%">, M.Sc. in Computer Science</span>
+      <div class="navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
+        <h2 class="hide">Site menu:</h2>
+        <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
+        <a class="nav-item" itemprop="name" href="/images/">Images</a>
+        <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
+        <a class="nav-item" itemprop="name" href="/publications/">Publications</a>
+        <a class="nav-item-current" itemprop="name" href="/research/">Research</a>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>
+        <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
+        <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
-            <p id="namePosition" itemprop="jobTitle">
-              Human-Computer Interaction &amp; Information Visualization
-            </p></a
-          >
-        </div>
-
-        <div
-          class="navigation"
-          itemscope
-          itemtype="https://schema.org/SiteNavigationElement"
-        >
-          <h2 class="hide">Site menu:</h2>
-          <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
-          <a class="nav-item" itemprop="name" href="/images/">Images</a>
-          <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
-          <a class="nav-item" itemprop="name" href="/publications/"
-            >Publications</a
-          >
-          <a class="nav-item-current" itemprop="name" href="/research/"
-            >Research</a
-          >
-          <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/"
-            >Bio</a
-          >
-          <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
-          <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
-
-          <a class="nav-item" itemprop="name" href="https://erikpaluka.com/"
-            >Home</a
-          >
-        </div>
-      </div>
-
-      <div class="researchRow">
-        <a href="off-screen-desktop/">
-          <div class="researchProject">
-            <img
-              alt="Spatial Interaction"
-              src="../img/spatialInteract/tom.jpg"
-              width="250"
-              height="250"
-            />
-            <div class="projectTitle">
-              Off-Screen Desktop &mdash; Master's Thesis on Spatial Interaction
-            </div>
-          </div>
-        </a>
-
-        <a href="tandemtable/">
-          <div class="researchProject">
-            <img
-              alt="TandemTable"
-              src="../img/TandemTable/TandLangLearn.jpg"
-              width="250"
-              height="250"
-            />
-            <div class="projectTitle">
-              TandemTable &mdash; Honours Undergraduate Thesis
-            </div>
-          </div>
-        </a>
-
-        <a href="spatialvis/">
-          <div class="researchProject">
-            <img
-              alt="Visualization of Logged Spatial Interaction Data"
-              src="../img/projects/spatialvis-small.jpg"
-              width="250"
-              height="250"
-            />
-            <div class="projectTitle">
-              SpatialVis: <br />
-              Web-based Visualization System
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="researchRow" style="margin-top: 20px">
-        <a href="smt/">
-          <div class="researchProject">
-            <img
-              alt="Simple Multi-Touch Toolkit"
-              src="../img/SMT/SMT-PCSketch.jpg"
-              width="250"
-              height="250"
-            />
-            <div class="projectTitle">
-              The Simple Multi-Touch <br />(SMT) Toolkit
-            </div>
-          </div>
-        </a>
-
-        <a href="wall-of-gray/">
-          <div class="researchProject">
-            <img
-              alt="Reading Comprehension App"
-              src="../img/projects/wall-of-gray-small2.jpg"
-              width="250"
-              height="250"
-            />
-            <div class="projectTitle">
-              Reading Comprehension <br />
-              in Mobile Devices<br />
-            </div>
-          </div>
-        </a>
-
-        <a href="affectvis/">
-          <div class="researchProject">
-            <img
-              alt="Affective InfoVis Study"
-              src="../img/edr-small.jpg"
-              width="250"
-              height="250"
-            />
-            <div class="projectTitle">
-              The Emotional Effect of Embellishments in Visualizations
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="researchRow" style="margin-top: 20px; margin-bottom: 30px">
-        <a href="percept/">
-          <div class="researchProject">
-            <img
-              alt="S3D InfoVis Study"
-              src="../img/Perceptsmall.jpg"
-              width="250"
-              height="250"
-            />
-            <div class="projectTitle">
-              Stereoscopic 3D &amp; Information <br />
-              Visualization Perception Study
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <!-- <div id="gallery"></div>
-        <script src="script.js"></script> -->
-
-      <div id="footer">
-        <div>
-          <span style="font-size: 10px; float: left"
-            >Website optimized for</span
-          >
-          <img
-            alt="Chrome Logo"
-            id="cLogo"
-            width="61.5"
-            height="20"
-            style="float: left; margin-left: 5px"
-            src="https://erikpaluka.com/img/logos/chrome.png"
-          />
-        </div>
-        <a
-          style="visibility: hidden; float: left"
-          class="left"
-          href="https://plus.google.com/114064655173059994291?rel=author"
-          >Google</a
-        >
-        <div id="footerText">
-          &copy; Originally created by Erik Paluka in 2013. All rights reserved.
-        </div>
+        <a class="nav-item" itemprop="name" href="https://erikpaluka.com/">Home</a>
       </div>
     </div>
-  </body>
+
+    <div class="researchRow">
+      <a href="off-screen-desktop/">
+        <div class="researchProject">
+          <img alt="Spatial Interaction" src="../img/spatialInteract/tom.jpg" width="250" height="250" />
+          <div class="projectTitle">
+            Off-Screen Desktop &mdash; Master's Thesis on Spatial Interaction
+          </div>
+        </div>
+      </a>
+
+      <a href="tandemtable/">
+        <div class="researchProject">
+          <img alt="TandemTable" src="../img/TandemTable/TandLangLearn.jpg" width="250" height="250" />
+          <div class="projectTitle">
+            TandemTable &mdash; Honours Undergraduate Thesis
+          </div>
+        </div>
+      </a>
+
+      <a href="spatialvis/">
+        <div class="researchProject">
+          <img alt="Visualization of Logged Spatial Interaction Data" src="../img/projects/spatialvis-small.jpg"
+            width="250" height="250" />
+          <div class="projectTitle">
+            SpatialVis: <br />
+            Web-based Visualization System
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="researchRow" style="margin-top: 20px">
+      <a href="smt/">
+        <div class="researchProject">
+          <img alt="Simple Multi-Touch Toolkit" src="../img/SMT/SMT-PCSketch.jpg" width="250" height="250" />
+          <div class="projectTitle">
+            The Simple Multi-Touch <br />(SMT) Toolkit
+          </div>
+        </div>
+      </a>
+
+      <a href="wall-of-gray/">
+        <div class="researchProject">
+          <img alt="Reading Comprehension App" src="../img/projects/wall-of-gray-small2.jpg" width="250" height="250" />
+          <div class="projectTitle">
+            Reading Comprehension <br />
+            in Mobile Devices<br />
+          </div>
+        </div>
+      </a>
+
+      <a href="affectvis/">
+        <div class="researchProject">
+          <img alt="Affective InfoVis Study" src="../img/edr-small.jpg" width="250" height="250" />
+          <div class="projectTitle">
+            The Emotional Effect of Embellishments in Visualizations
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="researchRow" style="margin-top: 20px; margin-bottom: 30px">
+      <a href="percept/">
+        <div class="researchProject">
+          <img alt="S3D InfoVis Study" src="../img/Perceptsmall.jpg" width="250" height="250" />
+          <div class="projectTitle">
+            Stereoscopic 3D &amp; Information <br />
+            Visualization Perception Study
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <!-- <div id="gallery"></div>
+        <script src="script.js"></script> -->
+
+    <div id="footer">
+      <div>
+        <span style="font-size: 10px; float: left">Website optimized for</span>
+        <img alt="Chrome Logo" id="cLogo" width="61.5" height="20" style="float: left; margin-left: 5px"
+          src="https://erikpaluka.com/img/logos/chrome.png" />
+      </div>
+      <a style="visibility: hidden; float: left" class="left"
+        href="https://plus.google.com/114064655173059994291?rel=author">Google</a>
+      <div id="footerText">
+        &copy; Originally created by Erik Paluka in 2013. All rights reserved.
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
